[PE] Don't fragment painting layer of repeating table header/footer in paged media

Previously, to let the painting layer of a repeating table header/footer
in paged media initiate multi-fragment painting, we created fragments
in the painting layer. This caused several problems:

- The fragments didn't have proper fragment clips, causing non-fragmented
  contents to be painted multiple times. It's also not feasible to create
  fragment clips for the forced fragments on the painting layer because
  we couldn't insert them into the clip tree.

- The previous "if (paint_info.FragmentToPaint(layout_table_section_))
  return;" in TableSectionPainter caused nested repeating header/footer
  not repeated.

Now don't fragment painting layer of repeating table header/footer in
paged media. Instead, let the repeating table header/footer repeat by
itself when needed.

Bug: 852773
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I1172a334b5021eb7e987404bb72d9b841a4d39d4
Reviewed-on: https://chromium-review.googlesource.com/1112578
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569901}
Former-commit-id: cf69822f0cdf24a24cce2f92fdfe029ba2cf7dfb